# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  setup.py
life/: __init__.py
src/: argh.h  life.cpp  life.h  main.cpp  python.cpp  test.cpp
tests/: Lines.rle  randomLife.py  readRLE.py  test.py  test_noGUI.py
